Z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,7 @@ img{
   left: 0;
   right: 0;
   background: rgba(0, 0, 0, 0.8);
+  z-index: 2;
 }
 
 .hidden{
